# Planificador_de_CPU

./: CMakeLists.txt  README.md
src/: Algoritmos.c  Algoritmos.h  CMakeLists.txt  PCB.h  cliente.c  ejecutable  exeCliente  exeSeridor  exeServidor  main  main.c  main.cpp  prueba.txt  servidor.c
src/Client/: Automatic.h  Manual.h
src/Loader/: Loader.h
